--- a/projeto/app/src/main/res/layout/activity_main.xml
+++ b/projeto/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,7 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/colorAccent"
+                android:background="@color/background_black"
                 android:gravity="center"
                 android:text="section"
                 android:textAppearance="?android:textAppearanceMedium"
@@ -60,7 +60,6 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
                 android:layout_marginBottom="8dp"
-                android:text="section"
                 android:textAppearance="?android:textAppearanceMedium"
                 android:textColor="@color/textSection"
                 android:textStyle="bold"
