--- a/projeto/app/src/main/res/layout/activity_news_details.xml
+++ b/projeto/app/src/main/res/layout/activity_news_details.xml
@@ -131,11 +131,12 @@
                     android:id="@+id/text_view_image_text"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginRight="8dp"
-                    android:layout_marginBottom="8dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginLeft="0dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginRight="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@color/background_black"
                     android:textAlignment="center"
                     android:adjustViewBounds="true"
                     android:layout_centerInParent="true"
@@ -143,7 +144,8 @@
                     android:textColor="@color/white"
                     app:layout_constraintBottom_toBottomOf="@+id/image_view_destak"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:visibility="gone"/>
 
             </android.support.constraint.ConstraintLayout>
 
