--- a/projeto/app/src/main/res/values/colors.xml
+++ b/projeto/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#D81B60</color>
     <color name="white">#FFFFFF</color>
     <color name="gray">#858585</color>
+    <color name="background_black">#99000000</color>
 
     <color name="backgroundShimmer">#cecdcd</color>
     <color name="textSubtitle">#1f324a</color>
